examples/type_system/failing/155_unresolved_member_access_strict_e425.flx
fn main() -> Unit {
    let value: Int = mystery.field
}
